--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,10 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.12.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
